--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: Your Name
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Gamedev and AI
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars2.githubusercontent.com/u/7056363?v=4&s=460
 
 #
 # Flags below are optional
