--- a/_config.yml
+++ b/_config.yml
@@ -18,17 +18,17 @@ avatar: https://avatars2.githubusercontent.com/u/7056363?v=4&s=460
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: riveroyuichi@gmail.com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: riverreal
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
+  youtube: channel/UCofz6QndtAanSxyiH9TZ7Mw # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
